Include `site.baseurl` in meta image path

--- a/_includes/Head.html
+++ b/_includes/Head.html
@@ -36,7 +36,7 @@
   />
   <meta
     itemprop="image"
-    content="{{ '/assets/img/image.png' | absolute_url }}"
+    content="{{ site.baseurl }}{{ '/assets/img/image.png' | absolute_url }}"
   />
 
   <!-- OpenGraph -->
