--- a/_includes/Head.html
+++ b/_includes/Head.html
@@ -8,7 +8,7 @@
 
   <!-- Icons -->
   <link rel="icon" href="{{ '/assets/icon/favicon.ico' | absolute_url }}" />
-  <meta name="theme-color" content="#57d6d6" />
+  <meta name="theme-color" content="#00b3ea" />
   <link
     rel="apple-touch-icon"
     sizes="180x180"
