--- a/_scss/_index.scss
+++ b/_scss/_index.scss
@@ -2,6 +2,8 @@
 @import 'animations';
 @import 'type';
 @import 'body';
+@import 'includes/Scrollbar';
+
 @import 'includes/ContactForm';
 @import 'includes/Container';
 @import 'includes/Footer';
