--- a/_scss/includes/_MenuToggle.scss
+++ b/_scss/includes/_MenuToggle.scss
@@ -7,16 +7,23 @@
   cursor: pointer;
   display: none;
   font-size: 2rem;
-  height: 2rem;
-  line-height: 2rem;
+  height: 3rem;
+  line-height: 3rem;
   opacity: 0;
+  overflow: hidden;
   pointer-events: none;
   position: absolute;
-  right: 2.25rem;
+  right: 3.5rem;
   text-align: center;
-  top: 3.5rem;
-  width: 2rem;
+  top: -6rem;
+  transition: transform 0.2s ease-out;
+  user-select: none;
+  width: 3rem;
   z-index: 2;
+
+  &:hover {
+    transform: scaleY(1.25);
+  }
 
   @media screen and (max-width: $breakpoint) {
     display: block;
@@ -42,5 +49,9 @@
 .MenuToggle--off--toggled {
   @media screen and (max-width: $breakpoint) {
     display: block;
+  }
+
+  &:hover {
+    transform: scaleY(0.75);
   }
 }
