--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,13 @@
 <html lang="en">
   {% include Head.html %}
   <body>
+    <div class="Video">
+      <iframe
+        src="https://www.youtube.com/embed/W0LHTWG-UmQ?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&playlist=W0LHTWG-UmQ"
+        frameborder="0"
+        allowfullscreen
+      ></iframe>
+    </div>
     {% include Page.html %} {% include ContactForm.html %}
   </body>
 </html>
